Adapted delegate and code flow to support multiple pre-defined certificates